header spacing fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -207,7 +207,7 @@ body {
 # hero
 -----------------------------------------------------------*/
 .hero-content {
-    padding: 100px 0;
+    padding: 200px 0;
     background: linear-gradient(0deg, hsla(0, 0%, 5%, 0.7), hsla(0, 0%, 5%, 0.5)),url('../images/cover.jpg') no-repeat;
     background-size: cover;
 }
